--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Hacker theme
-description: Hacker is a theme for GitHub Pages.
+title: 6530250182
+description: Pattaravut
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-hacker
